first-section/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fleetman-api-gateway
  name: fleetman-api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleetman-api-gateway
  template:
    metadata:
      labels:
        app: fleetman-api-gateway
    spec:
      containers:
        - image: richardchesterwood/k8s-fleetman-api-gateway:release1
          name: k8s-fleetman-api-gateway
          ports:
            - containerPort: 8080
