first-section/fleetman-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fleetman-mongodb
  name: fleetman-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleetman-mongodb
  template:
    metadata:
      labels:
        app: fleetman-mongodb
    spec:
      containers:
      - image: mongo:3.6
        name: mongo
        ports:
          - containerPort: 27017
        volumeMounts:
          - name: mongo-persistent-storage
            mountPath: /data/db
        resources:
          requests:
            cpu: 10m
            memory: 400Mi
      volumes:
        - name: mongo-persistent-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
          #hostPath:
            #path: /mnt/some-directory/mongodb
            #type: DirectoryOrCreate
