first-section/position-simulator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: position-simulator
  name: position-simulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: position-simulator
  template:
    metadata:
      labels:
        app: position-simulator
    spec:
      containers:
        - image: richardchesterwood/k8s-fleetman-position-simulator:resources
          name: k8s-fleetman-position-simulator
          resources:
            requests:
              cpu: 40m
              memory: 200Mi
