first-section/position-tracker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fleetman-position-tracker
  name: fleetman-position-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleetman-position-tracker
  template:
    metadata:
      labels:
        app: fleetman-position-tracker
    spec:
      containers:
      - image: richardchesterwood/k8s-fleetman-position-tracker:release3
        name: k8s-fleetman-position-tracker
        ports:
          - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 500Mi
