first-section/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fleetman-api-gateway
  name: fleetman-api-gateway
spec:
  ports:
    - name: "8080"
      port: 8080
      protocol: TCP
      targetPort: 8080

  selector:
    app: fleetman-api-gateway

  type: NodePort
