first-section/fleetman-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fleetman-mongodb
  name: fleetman-mongodb
spec:
  ports:
  - name: "27017"
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: fleetman-mongodb
  type: ClusterIP
