first-section/position-tracker-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fleetman-position-tracker
  name: fleetman-position-tracker
spec:
  ports:
  - name: "8080"
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fleetman-position-tracker
  type: NodePort
