first-section/webapp-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webapp
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: webapp
